css/style.css
/********** Base styles **********/
* {
  box-sizing: border-box;
  margin-top: 0;
  margin-bottom: 0;
}

h1 {
  margin-bottom: 15px;
  text-align: center;
}

.box {
  position: relative;
  padding-bottom: 10px;
  padding-right: 10px;
  padding-left: 10px;
  margin: 5px;
  background-color: grey;
  border: 1px solid black;
}

.body {
/*  border: 1px solid black;
*//*  background-color: #A52A2A;
*/  width: 90%;
  height: 150px;
  margin-right: auto;
  margin-left: auto;
  margin-top: 50px;
  font-family: Helvetica;
  color: white;
}

.title {
  color: white;
  text-align: center;
  padding-top: 5px;
  position: absolute;
  top: 0;
  right: 0;
  height: 30px;
  width: 80px;
  border: 1px solid black;
    font-family: Helvetica;
}

.titleC1 {
  background-color: blue;
}

.titleC2 {
  background-color: green;
}

.titleC3 {
  background-color: orange;
}

/* Simple Responsive Framework. */
.row {
  width: 100%;
}

/********** Large devices only **********/
@media (min-width: 992px) {
  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
    float: left;
/*    border: 1px solid black;*/
  }
  .col-lg-1 {
    width: 8.33%;
  }
  .col-lg-2 {
    width: 16.66%;
  }
  .col-lg-3 {
    width: 25%;
  }
  .col-lg-4 {
    width: 33.33%;
  }
  .col-lg-5 {
    width: 41.66%;
  }
  .col-lg-6 {
    width: 50%;
  }
  .col-lg-7 {
    width: 58.33%;
  }
  .col-lg-8 {
    width: 66.66%;
  }
  .col-lg-9 {
    width: 74.99%;
  }
  .col-lg-10 {
    width: 83.33%;
  }
  .col-lg-11 {
    width: 91.66%;
  }
  .col-lg-12 {
    width: 100%;
  }
}

/********** Medium devices only **********/
@media (min-width: 768px) and (max-width: 991px) {
  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
    float: left;
/*    border: 1px solid black;
*/  }
  .col-md-1 {
    width: 8.33%;
  }
  .col-md-2 {
    width: 16.66%;
  }
  .col-md-3 {
    width: 25%;
  }
  .col-md-4 {
    width: 33.33%;
  }
  .col-md-5 {
    width: 41.66%;
  }
  .col-md-6 {
    width: 50%;
  }
  .col-md-7 {
    width: 58.33%;
  }
  .col-md-8 {
    width: 66.66%;
  }
  .col-md-9 {
    width: 74.99%;
  }
  .col-md-10 {
    width: 83.33%;
  }
  .col-md-11 {
    width: 91.66%;
  }
  .col-md-12 {
    width: 100%;
  }
}

